fixed signup form input field spacing

--- a/Sign Up/signUpForm.css
+++ b/Sign Up/signUpForm.css
@@ -21,6 +21,7 @@ h1 {
 
 input[type=text]{ /*CSS selector, [attribute=value]*, select all elements with target=text*/
     height: 5vh;
+    padding-left: 1%; /*so input text is not against border*/
     border-style: none;
     border-radius: 0% 0% 0% 0% / 0% 0% 0% 0%;
     box-shadow: 20px 20px rgba(0,0,0,0.15);
@@ -43,12 +44,13 @@ b {
 
 ::placeholder { /*placeholder selector*/
     font-family: Arial, Helvetica, sans-serif;
-    padding-left: 1%; 
+     
     
 }
 
 input[list] {
     height: 5vh;
+    padding-left: 1%;
 }
 
 .submit-container {
